# maker-file-index

./: LICENSE  README.md  pyproject.toml
files/: shelf.lbrn2
misc/: lightburn_index.py
src/maker_file_index/: cli.py  indexer.py
src/maker_file_index/plugins/: base.py  lightburn.py  loader.py  scad.py  stl.py
src/maker_file_index/templates/: dir_index.md.j2  report.md.j2
